--- a/views/includes/flash.ejs
+++ b/views/includes/flash.ejs
@@ -1,14 +1,13 @@
-<% if(success && success.length>0){ %>
-    <div class="alert alert-success alert-dismissible fade show col-10 offset-1 col-md-6 offset-md-3" role="alert">
-        <%= success %>
-        <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
-    </div>
+<% if (typeof success !== 'undefined' && success.length > 0) { %>
+  <div class="alert alert-success alert-dismissible fade show col-10 offset-1 col-md-6 offset-md-3" role="alert">
+    <%= success %>
+    <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+  </div>
 <% } %>
 
-<% if(error && error.length>0){ %>
-    <div class="alert alert-danger alert-dismissible fade show col-10 offset-1 col-md-6 offset-md-3" role="alert">
-        <%= error %>
-        <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
-    </div>
+<% if (typeof error !== 'undefined' && error.length > 0) { %>
+  <div class="alert alert-danger alert-dismissible fade show col-10 offset-1 col-md-6 offset-md-3" role="alert">
+    <%= error %>
+    <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+  </div>
 <% } %>
-
