--- a/views/includes/navbar.ejs
+++ b/views/includes/navbar.ejs
@@ -18,13 +18,12 @@
 
       <div class="navbar-nav ms-auto">
         <a class="nav-link" href="/listings/new">Airbnd your home</a>
-        <% if(!currUser){ %>
+        <% if (typeof currUser !== 'undefined' && currUser) { %>
+          <a class="nav-link" href="/logout"><b>Log out</b></a>
+        <% } else { %>
           <a class="nav-link" href="/signup"><b>Sign up</b></a>
           <a class="nav-link" href="/login"><b>Log in</b></a>
-        <%}%>
-        <% if(currUser){ %>
-          <a class="nav-link" href="/logout"><b>Log out</b></a>
-        <%}%>
+        <% } %>
       </div>
 
     </div>
