--- a/views/listings/index.ejs
+++ b/views/listings/index.ejs
@@ -1,4 +1,4 @@
-<% layout("/layouts/boilerplate")%>
+<% layout('layouts/boilerplate') %>
 
 <div class="filters-container">
     <!-- Left Arrow -->
