--- a/views/listings/show.ejs
+++ b/views/listings/show.ejs
@@ -1,4 +1,4 @@
-<% layout("/layouts/boilerplate")%>
+<% layout('layouts/boilerplate') %>
 <body>
     <div class="row mt-3">
         <div class="col-8 offset-3">
@@ -7,7 +7,11 @@
         <div class="listing-card col-6 offset-3 show-card">
             <img src="<%=listings.image.url%>" class="card-img-top show-img" alt="listing_image">
             <div class="card-body">
-                <p class="card-text">Owned by: <%=listings.owner.username %></p>
+                <% if (listings.owner && listings.owner.username) { %>
+                    <p class="card-text">Owned by: <%= listings.owner.username %></p>
+                <% } else { %>
+                    <p class="card-text">Owner info not available</p>
+                <% } %>
                 <p class="card-text"><%=listings.description %></p>
                 <p class="card-text">&#8377;<%=listings.price.toLocaleString("en-IN")%></p>
                 <p class="card-text"><%=listings.location%></p>
@@ -20,13 +24,13 @@
         </div>
     </div>
 
-    <% if(currUser && listings.owner._id.equals(currUser._id)) {%>
-    <div class="btns">
-        <a href="/listings/<%= listings._id %>/edit" class="btn btn-dark col-1 offset-3 edit-btn">Edit</a>
-        <form action="/listings/<%= listings._id %>?_method=DELETE" method="post">
-            <button class="btn btn-dark offset-5">Delete</button>
-        </form>
-    </div>
+    <% if(currUser && listings.owner && listings.owner._id.equals(currUser._id)) { %>
+        <div class="btns">
+            <a href="/listings/<%= listings._id %>/edit" class="btn btn-dark col-1 offset-3 edit-btn">Edit</a>
+            <form action="/listings/<%= listings._id %>?_method=DELETE" method="post">
+                <button class="btn btn-dark offset-5">Delete</button>
+            </form>
+        </div>
     <%}%>
     
     
@@ -73,7 +77,7 @@
                         <p class="starability-result card-text" data-rating="<%=review.rating%>"></p>
                         <p class="card-text"><%=review.comment%></p>
                     </div>
-                    <% if(currUser&&review.author._id.equals(currUser._id)){%>
+                    <% if (currUser && review.author && review.author._id.equals(currUser._id)) { %>
                         <form action="/listings/<%= listings.id %>/reviews/<%= review._id %>?_method=DELETE" method="post" class="mb-2">
                             <button class="btn btn-sm btn-dark">Delete</button>
                         </form>
