--- a/views/users/signup.ejs
+++ b/views/users/signup.ejs
@@ -1,4 +1,4 @@
-<% layout("/layouts/boilerplate")%>
+<% layout('layouts/boilerplate') %>
 <body>
     <div class="row">
         <h1 class="col-6 offset-3">SignUp on StayWander</h1>
